hphp/test/zend/good/ext/iconv/tests/iconv002.php.skipif
<?php
include('skipif.inc');
if (@iconv("ascii","UCS-4LE", "abcd") == '') {
	die("skip conversion to UCS-4LE not supported"); 
}
?>