hphp/test/zend/bad/ext/mysqli/tests/bug52891.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
if (!$IS_MYSQLND) {
	die("skip: test applies only to mysqlnd");
}
?>